Revision history for {{$dist->name}}

{{$NEXT}}

0.008     2013-06-11 15:59:23 PDT-0700 (Karen Etheridge)
          - fix bad templating in minted module
          - during minting, push the initial commit to github after creating
            the remote

0.007     2013-05-29 18:48:34 PDT-0700 (Karen Etheridge)
          - minting profile updates:
            - extra kwalitee tests enabled by default
            - test now has 'use <main module>;', prefers done_testing,
              and now fails, rather than not compiling
            - main module now avoids the list transformer where it breaks pod
              coverage tests; includes more template pod
          - config option added for changing the installer backend (still
            defaults to MakeMaker, for now)

0.006     2013-05-10 17:06:41 PDT-0700 (Karen Etheridge)
          - support dropped for directly passing stopwords via a mvp argument
            -- it's easier to just use a directive right in pod (and they can
            be added via ConfigSlicer too, if needed)
          - minting process now prompts to create a repository on github
          - alter max_target_perl setting for *this dist itself only* to
            commit to run on 5.16.3+, not 5.8.8+
          - the version of Dist::Zilla used to build this distribution is
            injected as a develop prerequisite for users of the plugin bundle
          - the version of this bundle used to mint a dist is set as the
            minimum version for subsequent builds of the dist
          - after release, the github repository is updated with the
            distribution's abstract as its description, and the metacpan page
            as its homepage.

0.005     2013-04-28 08:47:40 PDT-0700 (Karen Etheridge)
          - bump version for [Test::Compile] and [Test::CheckDeps] (RT#84900,
            RT#84904, RT#84905)

0.004     2013-04-26 20:56:11 PDT-0700 (Karen Etheridge)
          - fix missing .gitignore in minted dists